fixed spacing fbetween tablet and desktop-xl

--- a/src/page-sections/home/dts-tile/landing-dts.scss
+++ b/src/page-sections/home/dts-tile/landing-dts.scss
@@ -84,7 +84,7 @@ hr.horizontal_dts{
   margin-top: -5px;
 }
 
-@media only screen and (max-width: $desktop-xl) {
+@media only screen and (max-width: $desktop - 1) {
 
   .dts-module {
     width: 100%;
