--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -31,7 +31,7 @@
   }
 }
 
-@media screen and (max-width: $desktop) {
+@media screen and (max-width: $desktop - 1) {
   .more-analyses-row {
     flex-direction: column-reverse;
 
